<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2010, 2011 Christopher Eby <kreed@kreed.org>

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
-->
<resources>
	<string name="app_name">Vanilla Music</string>

	<!-- Playback Activity (main screen) -->
	<string name="no_songs">No songs found on your device.</string>
	<string name="empty_queue">No songs selected. Pick some from the library (search key) or enter random mode (in the menu).</string>
	<string name="settings">Settings</string>
	<string name="library">Library</string>
	<string name="display_mode">Display Mode</string>
	<string name="shuffle_enable">Enable Shuffle</string>
	<string name="shuffle_disable">Disable Shuffle</string>
	<string name="shuffle_albums">Shuffle Albums</string>
	<string name="shuffle_songs_enabled">Song shuffle enabled</string>
	<string name="shuffle_albums_enabled">Album shuffle enabled</string>
	<string name="shuffle_disabled">Shuffle disabled</string>
	<string name="repeat_enable">Enable Repeat</string>
	<string name="repeat_current">Repeat Song</string>
	<string name="repeat_disable">Disable Repeat</string>
	<string name="repeat_enabling">Repeating all songs</string>
	<string name="repeat_current_enabling">Repeating current song</string>
	<string name="repeat_disabling">Repeat disabled</string>
	<string name="random_enable">Enable Random</string>
	<string name="random_disable">Disable Random</string>
	<string name="random_enabling">Random enabled</string>
	<string name="random_disabling">Random disabled</string>
	<string name="song_load_failed">Failed to load song %s. It may be corrupt or missing.</string>
	<string name="queue_cleared">Queue cleared.</string>

	<!-- Widgets -->
	<string name="starting">Starting up...</string>

	<!-- New Playlist Dialog -->
	<string name="choose_playlist_name">Choose Playlist Name</string>
	<string name="create">Create</string>
	<string name="overwrite">Overwrite</string>
	<string name="cancel">Cancel</string>

	<!-- Song Chooser -->
	<string name="enqueue">Enqueue</string>
	<string name="play">Play</string>
	<string name="edit">Edit</string>
	<string name="rename">Rename</string>
	<string name="add_to_playlist">Add to Playlist...</string>
	<string name="new_playlist">New Playlist...</string>
	<string name="expand">Expand</string>
	<string name="delete">Delete</string>
	<string name="playback_view">Now Playing</string>
	<string name="search">Search</string>

	<plurals name="playing">
		<item quantity="one">1 song playing.</item>
		<item quantity="other">%d songs playing.</item>
	</plurals>
	<plurals name="enqueued">
		<item quantity="one">1 song enqueued.</item>
		<item quantity="other">%d songs enqueued.</item>
	</plurals>
	<plurals name="added_to_playlist">
		<item quantity="one">1 song added to playlist %2$s.</item>
		<item quantity="other">%1$d songs added to playlist %2$s.</item>
	</plurals>
	<string name="deleting">Deleting...</string>
	<string name="playlist_deleted">Playlist %s deleted.</string>
	<plurals name="deleted">
		<item quantity="one">1 song deleted.</item>
		<item quantity="other">%d songs deleted.</item>
	</plurals>

	<string name="artists">Artists</string>
	<string name="albums">Albums</string>
	<string name="songs">Songs</string>
	<string name="playlists">Playlists</string>
	<string name="genres">Genres</string>

	<string name="none">None</string>
	<string name="unknown">Unknown</string>
	<string name="title_by_artist">%1$s by %2$s</string>
	<string name="play_all">Play All</string>
	<string name="enqueue_all">Enqueue All</string>
	<string name="all_songs">All Songs</string>

	<!-- Preferences -->
	<plurals name="seconds">
		<item quantity="one">01 second</item>
		<item quantity="other">%02d seconds</item>
	</plurals>
	<plurals name="minutes">
		<item quantity="one">01 minute</item>
		<item quantity="other">%02d minutes</item>
	</plurals>
	<plurals name="hours">
		<item quantity="one">01 hour</item>
		<item quantity="other">%02d hours</item>
	</plurals>

	<string name="pref_output">Audio Output</string>
	<string name="volume_title">Volume</string>
	<string name="volume_summary">Music volume</string>
	<string name="media_button_title">Use Headset Controls</string>
	<string name="media_button_summary">Single click for play/pause. Double click for next.</string>
	<string name="headset_only_title">External Output Only</string>
	<string name="headset_only_summary">Only play music through an external output (e.g. headphones, Bluetooth)</string>
	<string name="headset_pause_title">Pause When Unplugged</string>
	<string name="headset_pause_summary">Pause when the headphones are unplugged.</string>
	<string name="headset_play_title">Play When Plugged</string>
	<string name="headset_play_summary">Play when the headphones are plugged in. (Only works when the service is running.)</string>

	<string name="pref_notifications">Notifications</string>
	<string name="notification_mode_title">Notification Mode</string>
	<string name="notification_mode_summary">When to show the notification</string>
	<string name="notification_action_title">Notification Action</string>
	<string name="notification_action_summary">What to do when the notification is pressed</string>
	<string name="notification_invert_color_title">Invert Notification Color</string>
	<string name="notification_invert_color_summary">Use white text instead of black text</string>

	<string name="pref_playback_view">Playback View</string>
	<string name="display_mode_title">Display Mode</string>
	<string name="display_mode_summary">The appearance and position of the song art and info.</string>
	<string name="swipe_up_action_title">Swipe Up Action</string>
	<string name="swipe_up_action_summary">What to do when a swipe up gesture is performed</string>
	<string name="swipe_down_action_title">Swipe Down Action</string>
	<string name="swipe_down_action_summary">What to do when a swipe down gesture is performed</string>
	<string name="cover_press_action_title">Cover Tap Action</string>
	<string name="cover_press_action_summary">What to do when the cover is tapped</string>
	<string name="cover_longpress_action_title">Cover Long Press Action</string>
	<string name="cover_longpress_action_summary">What to do when the cover is long-pressed</string>
	<string name="disable_cover_art_title">Disable Cover Art</string>
	<string name="disable_cover_art_summary">Do not show cover art anywhere in the application</string>

	<string name="pref_song_selector">Library View</string>
	<string name="selector_on_startup_title">Open on Startup</string>
	<string name="selector_on_startup_summary">Open library on startup</string>
	<string name="controls_in_selector_title">Controls in Library</string>
	<string name="controls_in_selector_summary">Show the currently playing song and media controls in the library view</string>
	<string name="default_action_title">Default Action</string>
	<string name="default_action_summary">What to do when an item is tapped</string>

	<string name="pref_misc">Miscellaneous Features</string>
	<string name="disable_lockscreen_title">Disable Lockscreen</string>
	<string name="disable_lockscreen_summary">Do not show the lockscreen with the library screen or playback screen open.</string>
	<string name="use_idle_timeout_title">Enable Idle Timeout</string>
	<string name="use_idle_timeout_summary">When active, playback will be stopped after the given period of inactivity</string>
	<string name="idle_timeout_title">Idle Timeout</string>
	<string name="idle_timeout_summary">The amount of time that must pass before becoming idle</string>
	<string name="double_tap_title">Double Tap Widget</string>
	<string name="double_tap_summary">Double-tapping the 1x1 widget will open the player. Incurs a 400ms delay before the widget responds to actions.</string>
	<string name="scrobble_title">Use ScrobbleDroid API</string>
	<string name="scrobble_summary">Scrobble to Last.FM through ScrobbleDroid or Simple Last.FM Scrobbler</string>
	<string name="stock_broadcast_title">Emulate Stock Broadcasts</string>
	<string name="stock_broadcast_summary">Send broadcasts emulating those sent by the stock music player to work with 3rd party lockscreen controls, widgets, etc.</string>
</resources>
