<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2010 Christopher Eby <kreed@kreed.org>

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:orientation="vertical"
		android:layout_weight="1"
		android:layout_width="fill_parent"
		android:layout_height="0px">
		<TabWidget
			android:id="@+id/tab_widget"
			android:tabStripEnabled="false"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/artist_tab"
				android:focusable="true"
				android:background="@drawable/buttonbar"
				android:drawableTop="@drawable/ic_tab_artists"
				android:text="@string/artists"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/tab_indicator_text"
				android:paddingTop="7dip"
				android:paddingBottom="2dip"
				android:gravity="center"
				android:layout_weight="1"
				android:layout_width="0px"
				android:layout_height="64dip"
				android:singleLine="true" />
			<TextView
				android:id="@+id/album_tab"
				android:focusable="true"
				android:background="@drawable/buttonbar"
				android:drawableTop="@drawable/ic_tab_albums"
				android:text="@string/albums"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/tab_indicator_text"
				android:paddingTop="7dip"
				android:paddingBottom="2dip"
				android:gravity="center"
				android:layout_weight="1"
				android:layout_width="0px"
				android:layout_height="64dip"
				android:singleLine="true" />
			<TextView
				android:id="@+id/song_tab"
				android:focusable="true"
				android:background="@drawable/buttonbar"
				android:drawableTop="@drawable/ic_tab_songs"
				android:text="@string/songs"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/tab_indicator_text"
				android:paddingTop="7dip"
				android:paddingBottom="2dip"
				android:gravity="center"
				android:layout_weight="1"
				android:layout_width="0px"
				android:layout_height="64dip"
				android:singleLine="true" />
			<TextView
				android:id="@+id/playlist_tab"
				android:focusable="true"
				android:background="@drawable/buttonbar"
				android:drawableTop="@drawable/ic_tab_playlists"
				android:text="@string/playlists"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/tab_indicator_text"
				android:paddingTop="7dip"
				android:paddingBottom="2dip"
				android:gravity="center"
				android:layout_weight="1"
				android:layout_width="0px"
				android:layout_height="64dip"
				android:singleLine="true" />
			<TextView
				android:id="@+id/genre_tab"
				android:focusable="true"
				android:background="@drawable/buttonbar"
				android:drawableTop="@drawable/ic_tab_songs"
				android:text="@string/genres"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/tab_indicator_text"
				android:paddingTop="7dip"
				android:paddingBottom="2dip"
				android:gravity="center"
				android:layout_weight="1"
				android:layout_width="0px"
				android:layout_height="64dip"
				android:singleLine="true" />
		</TabWidget>
		<FrameLayout
			android:id="@+id/lists"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<ListView
				android:id="@+id/artist_list"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
			<ListView
				android:id="@+id/album_list"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
			<ListView
				android:id="@+id/song_list"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
			<ListView
				android:id="@+id/playlist_list"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
			<ListView
				android:id="@+id/genre_list"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
		</FrameLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/limiter_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|left" />
	<LinearLayout
		android:id="@+id/search_box"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:paddingTop="4dip"
		android:paddingLeft="4dip"
		android:visibility="gone"
		android:background="@drawable/search_background">
		<EditText
			android:id="@+id/filter_text"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="textFilter" />
		<ImageButton
			android:id="@+id/clear_button"
			android:scaleType="fitCenter"
			android:paddingLeft="4dip"
			android:paddingRight="4dip"
			android:paddingBottom="4dip"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:background="@null"
			android:src="@drawable/close" />
	</LinearLayout>
</merge>

